tests/spec/compile-pass/005_thread_move.zn
// category: compile-pass
// profile: hosted
// purpose: owned data moves into a spawned thread

module tests.pass.threadMove;

import core.result.{Result, Ok};
import std.thread.Thread;

enum Error {
    Failed,
}

struct Job {
    id: U64,
}

fn run(move job: Job) -> Result<Unit, Error> {
    val ignoredId = job.id;
    return Ok(());
}

fn main() -> Result<Unit, Error> {
    val job = Job { id: 42 };
    val handle = try Thread.spawn(move () -> Result<Unit, Error> {
        return run(move job);
    });
    try move handle.join();
    return Ok(());
}
